# MONAN-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
analyses/vertical_structure/: analysis_vertical_structure.py
exploratory/aal_extract_gfs/: Extract_gfs_grib2_to_netcdf.sh
exploratory/al_precipitation/: Gera_monthly_mean_Bias.sh  Gera_monthly_mean_MAE_RMSE.sh  Gera_monthly_sum_Skill.sh  Mean_Bias_MONAN_BAM_GFS.py  Mean_MAE_MONAN_BAM_GFS.py  Mean_RMSE_MONAN_BAM_GFS.py  Mean_Skill_score_MONAN_BAM_GFS.py  README.md
exploratory/ere_precipitation/: MONAN_Analysis.sh
exploratory/gtm_test/: test_importing.py
exploratory/gtm_vertical_analysis/: vertical_analysis_aux.py  vertical_analysis_config.py  vertical_analysis_main.py
exploratory/gtm_vertical_structure/: analysis_vertical_structure.py
exploratory/import_test/: example_analysis.py
src/monan_analysis/: config.py  io.py  plots.py  stats.py  utils.py
